--- a/project/xml-ajax/index.html
+++ b/project/xml-ajax/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
 <head>
 	<title>AJAX-XML-HTML-PRAC</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="jquery-3.3.1.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<script src="ajax-update.js"></script>
 	<meta charset="utf-8">
 </head>
 <body>
 <div class="container">
 	<div class="row">
-		<div class="left-part">
+		<div class="col-md-8 col-sm-8">
 			<div class="content">
 				<button id="btnFetch" onclick="updatePageWithXMLData();">Fetch Data</button>
 
-				<table cellpadding="6" border="1">
+				<table class="table">
 					<thead>
 						<tr>
 							<th>SN</th>
@@ -30,12 +32,12 @@
 				</table>
 			</div>
 		</div>
-		<div class="right-part">
+		<div class="col-md-4 col-sm-4">
 			<div class="content">
-				<img src="img/img1.jpg">
-				<img src="img/img2.jpg">
-				<img src="img/img3.jpg">
-				<img src="img/img4.jpg">
+				<img src="img/img1.jpg" class="img im-responsive">
+				<img src="img/img2.jpg" class="img im-responsive">
+				<img src="img/img3.jpg" class="img im-responsive">
+				<img src="img/img4.jpg" class="img im-responsive">
 			</div>
 		</div>
 	</div>
