--- a/project/xml-ajax/index.html
+++ b/project/xml-ajax/index.html
@@ -8,11 +8,14 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<script src="ajax-update.js"></script>
 	<meta charset="utf-8">
+	<style>
+		img{width:150px;height:100px}
+	</style>
 </head>
 <body>
 <div class="container">
-	<div class="row">
-		<div class="col-md-8 col-sm-8">
+	<div class="row" style="margin-top: 5%">
+		<div class="col-md-9 col-sm-9">
 			<div class="content">
 				<button id="btnFetch" onclick="updatePageWithXMLData();">Fetch Data</button>
 
@@ -32,7 +35,7 @@
 				</table>
 			</div>
 		</div>
-		<div class="col-md-4 col-sm-4">
+		<div class="col-md-3 col-sm-3">
 			<div class="content">
 				<img src="img/img1.jpg" class="img im-responsive">
 				<img src="img/img2.jpg" class="img im-responsive">
