--- a/project/xml-ajax/index.html
+++ b/project/xml-ajax/index.html
@@ -17,7 +17,7 @@
 	<div class="row" style="margin-top: 5%">
 		<div class="col-md-9 col-sm-9">
 			<div class="content">
-				<button id="btnFetch" onclick="updatePageWithXMLData();">Fetch Data</button>
+				<button class="btn btn-default btn-md" id="btnFetch" onclick="updatePageWithXMLData();">Fetch Data</button>
 
 				<table class="table">
 					<thead>
