--- a/project/xml-ajax/index.html
+++ b/project/xml-ajax/index.html
@@ -16,6 +16,7 @@
 <div class="container">
 	<div class="row" style="margin-top: 5%">
 		<div class="col-md-9 col-sm-9">
+			<h3 class="text-center" style="font-weight: 900">WOrking with XML-AJAX-HTML</h3>
 			<div class="content">
 				<button class="btn btn-default btn-md" id="btnFetch" onclick="updatePageWithXMLData();">Fetch Data</button>
 
